[gd_scene load_steps=5 format=2]

[ext_resource path="res://menus/Themes/default.tres" type="Theme" id=1]
[ext_resource path="res://Fonts/HeadingFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://menus/main menu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://menus/Fader/Fader.tscn" type="PackedScene" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 620.0
margin_bottom = 340.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
text = "Depths - Refactored v0.1"
align = 1

[node name="ButtonMargins" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 600.0
margin_bottom = 301.0
custom_constants/margin_top = 50

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ButtonMargins"]
margin_top = 50.0
margin_right = 92.0
margin_bottom = 265.0
size_flags_horizontal = 0
custom_constants/separation = 10

[node name="NewGame" type="Button" parent="MarginContainer/VBoxContainer/ButtonMargins/Buttons"]
margin_right = 92.0
margin_bottom = 35.0
focus_neighbour_left = NodePath("../Quit")
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_right = NodePath("../Continue")
focus_neighbour_bottom = NodePath("../Continue")
focus_next = NodePath("../Continue")
focus_previous = NodePath("../Quit")
text = "New Game"

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer/ButtonMargins/Buttons"]
margin_top = 45.0
margin_right = 92.0
margin_bottom = 80.0
focus_neighbour_left = NodePath("../NewGame")
focus_neighbour_top = NodePath("../NewGame")
focus_neighbour_right = NodePath("../HighScore")
focus_neighbour_bottom = NodePath("../HighScore")
focus_next = NodePath("../HighScore")
focus_previous = NodePath("../NewGame")
text = "Continue"

[node name="HighScore" type="Button" parent="MarginContainer/VBoxContainer/ButtonMargins/Buttons"]
margin_top = 90.0
margin_right = 92.0
margin_bottom = 125.0
focus_neighbour_left = NodePath("../Continue")
focus_neighbour_top = NodePath("../Continue")
focus_neighbour_right = NodePath("../Settings")
focus_neighbour_bottom = NodePath("../Settings")
focus_next = NodePath("../Settings")
focus_previous = NodePath("../Continue")
text = "High Score"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer/ButtonMargins/Buttons"]
margin_top = 135.0
margin_right = 92.0
margin_bottom = 170.0
focus_neighbour_left = NodePath("../HighScore")
focus_neighbour_top = NodePath("../HighScore")
focus_neighbour_right = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../HighScore")
text = "Settings"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/ButtonMargins/Buttons"]
margin_top = 180.0
margin_right = 92.0
margin_bottom = 215.0
focus_neighbour_left = NodePath("../Settings")
focus_neighbour_top = NodePath("../Settings")
focus_neighbour_right = NodePath("../NewGame")
focus_neighbour_bottom = NodePath("../NewGame")
focus_next = NodePath("../NewGame")
focus_previous = NodePath("../Settings")
text = "Quit"

[node name="Fader" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonMargins/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="fade_out_finished" from="Fader" to="." method="_on_Fader_fade_out_finished"]
